videodecoder: If there is no PTS at all, assume it starts from the segment start

This is to make the multifilesrc ! pngdec case work

https://bugzilla.gnome.org/show_bug.cgi?id=688043